@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.29 2004/06/13 13:51:02 dtucker Exp $
+#	$OpenBSD: Makefile,v 1.30 2004/06/13 15:04:08 djm Exp $
 
 REGRESS_TARGETS=	t1 t2 t3 t4 t5 t6 t7 t-exec
 tests:		$(REGRESS_TARGETS)
@@ -36,7 +36,8 @@ LTESTS= 	connect \
 		sftp-batch \
 		reconfigure \
 		dynamic-forward \
-		forwarding
+		forwarding \
+		multiplex
 
 USER!=		id -un
 CLEANFILES=	t2.out t6.out1 t6.out2 t7.out t7.out.pub copy.1 copy.2 \
