@@ -9,6 +9,9 @@
    - dtucker@cvs.openbsd.org 2004/06/13 13:51:02
      [Makefile test-exec.sh]
      Add scp regression test; with & ok markus@
+   - djm@cvs.openbsd.org 2004/06/13 15:04:08
+     [Makefile test-exec.sh]
+     regress test for client multiplexing; ok markus@
 
 20040615
  - (djm) OpenBSD CVS Sync
@@ -1234,4 +1237,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3390 2004/06/16 10:15:59 dtucker Exp $
+$Id: ChangeLog,v 1.3391 2004/06/16 10:22:22 dtucker Exp $
